# ram-arbitrage-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
app/: database.py  main.py
app/models/: __init__.py  price_point.py
app/scrapers/: amazon.py  base.py  newegg.py
tests/: conftest.py  test_models.py  test_scrapers.py
